--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "kekstagram",
   "version": "25.0.0",
   "private": true,
-  "description": "Личный проект «{{projectTitle}}» от HTML Academy",
+  "description": "Личный проект «Кекстограм» от HTML Academy",
   "repository": {
     "type": "git",
     "url": "{{sshUrl}}"
   },
   "bugs": {
-    "url": "{{bugsUrl}}"
+    "url": "git@github.com:Shavqat001/kekstagram.git"
   },
   "devDependencies": {
     "browser-sync": "2.27.7",
